--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <header>
         <h1>Jeel Rajani</h1>
         <p>Backend PHP Developer | REST APIs | MySQL</p>
+
+        <a href="#" class="btn" download>
+            Download Resume
+        </a>
     </header>
+
 
     <section>
         <h2>About Me</h2>
