--- a/index.html
+++ b/index.html
@@ -48,11 +48,22 @@
     </section>
 
     <section>
-        <h2>Contact</h2>
-        <p>Email: jeel.rajani@email.com</p>
-        <p>GitHub: <a href="https://github.com/jeelrajani" target="_blank">github.com/jeelrajani</a></p>
-        <p>LinkedIn: Add your LinkedIn URL</p>
+        <h2>Contact Me</h2>
+
+        <form action="https://formspree.io/f/xkogggra" method="POST">
+            <label>Your Name</label><br>
+            <input type="text" name="name" required><br><br>
+
+            <label>Email</label><br>
+            <input type="email" name="email" required><br><br>
+
+            <label>Message</label><br>
+            <textarea name="message" rows="5" required></textarea><br><br>
+
+            <button type="submit" class="btn">Send Message</button>
+        </form>
     </section>
+
 
     <footer>
         <p>© 2025 Jeel Rajani</p>
