--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
     </section>
 
     <section>
+        <h2>Work Experience</h2>
+
+        <h3>Jr. PHP Developer</h3>
+        <p><strong>Drop Techno Lab Private Limited</strong> | Ahmedabad</p>
+        <p>Feb 2024 – Present</p>
+
+        <ul>
+            <li>Developed and maintained backend modules for web applications using PHP and MVC architecture</li>
+            <li>Integrated multiple third-party APIs for data verification, CRM synchronization, and external services
+            </li>
+            <li>Implemented authentication, role-based access control, and secure data handling</li>
+            <li>Designed and optimized MySQL queries to improve application performance</li>
+            <li>Handled file uploads, email notifications, and scheduled tasks using cron jobs</li>
+            <li>Collaborated with team members using Git for version control and code reviews</li>
+            <li>Worked on multiple client projects involving complex business workflows</li>
+        </ul>
+    </section>
+
+
+    <section>
         <h2>Projects</h2>
         <ul>
             <li>Multi-Vendor & Multi-Language E-commerce Platform</li>
