--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
 
-    <header>
-        <h1>Jeel Rajani</h1>
-        <p>Backend PHP Developer | REST APIs | MySQL</p>
+    <header class="hero">
+        <div class="overlay">
+            <h1>Jeel Rajani</h1>
+            <p>Backend PHP Developer | REST APIs | MySQL</p>
 
-        <a href="#" class="btn" download>
-            Download Resume
-        </a>
+            <a href="#" class="btn" download>
+                Download Resume
+            </a>
+        </div>
     </header>
 
 
