--- a/index.html
+++ b/index.html
@@ -1,96 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Jeel Rajani | Backend Developer</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-    <header class="hero">
-        <div class="overlay">
-            <h1>Jeel Rajani</h1>
-            <p>Backend PHP Developer | REST APIs | MySQL</p>
+<header class="hero">
+    <div class="hero-left">
+        <div class="brand">jeel.</div>
 
-            <a href="#" class="btn" download>
-                Download Resume
-            </a>
-        </div>
-    </header>
+        <h1>
+            Backend<br>
+            Developer<span>.</span>
+        </h1>
 
-
-    <section>
-        <h2>About Me</h2>
-        <p>
-            Backend-focused PHP developer with 2 years of experience in building REST-based systems,
-            integrating third-party APIs, and optimizing databases for performance.
+        <p class="subtitle">
+            I build reliable backend systems, REST-based APIs,
+            and scalable database-driven applications.
         </p>
-    </section>
 
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>PHP</li>
-            <li>REST APIs</li>
-            <li>MySQL</li>
-            <li>Git & GitHub</li>
-            <li>Postman</li>
-        </ul>
-    </section>
+        <a href="Jeel_Rajani_Resume.pdf" class="btn" download>
+            Download Resume
+        </a>
 
-    <section>
-        <h2>Work Experience</h2>
+        <div class="meta">
+            <div>
+                <strong>2+ Years Experience</strong><br>
+                PHP & Backend Development
+            </div>
+            <div>
+                <strong>API & Database</strong><br>
+                MySQL, Integrations
+            </div>
+        </div>
+    </div>
 
-        <h3>Jr. PHP Developer</h3>
-        <p><strong>Drop Techno Lab Private Limited</strong> | Ahmedabad</p>
-        <p>Feb 2024 – Present</p>
-
-        <ul>
-            <li>Developed and maintained backend modules for web applications using PHP and MVC architecture</li>
-            <li>Integrated multiple third-party APIs for data verification, CRM synchronization, and external services
-            </li>
-            <li>Implemented authentication, role-based access control, and secure data handling</li>
-            <li>Designed and optimized MySQL queries to improve application performance</li>
-            <li>Handled file uploads, email notifications, and scheduled tasks using cron jobs</li>
-            <li>Collaborated with team members using Git for version control and code reviews</li>
-            <li>Worked on multiple client projects involving complex business workflows</li>
-        </ul>
-    </section>
-
-
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>Multi-Vendor & Multi-Language E-commerce Platform</li>
-            <li>Loan Application & CRM Integration System</li>
-            <li>REST API – Loan Management Platform</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Contact Me</h2>
-
-        <form action="https://formspree.io/f/xkogggra" method="POST">
-            <label>Your Name</label><br>
-            <input type="text" name="name" required><br><br>
-
-            <label>Email</label><br>
-            <input type="email" name="email" required><br><br>
-
-            <label>Message</label><br>
-            <textarea name="message" rows="5" required></textarea><br><br>
-
-            <button type="submit" class="btn">Send Message</button>
-        </form>
-    </section>
-
-
-    <footer>
-        <p>© 2025 Jeel Rajani</p>
-    </footer>
+    <div class="hero-right">
+        <div class="image-box">
+            <img src="bg.jpeg" alt="Jeel Rajani">
+        </div>
+    </div>
+</header>
 
 </body>
-
 </html>
