--- a/index.html
+++ b/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Jeel Rajani | Backend Developer</title>
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header class="hero">
-    <div class="hero-left">
-        <div class="brand">jeel.</div>
+    <header class="hero">
 
-        <h1>
-            Backend<br>
-            Developer<span>.</span>
-        </h1>
+        <!-- LEFT SIDE -->
+        <div class="left">
+            <div class="logo">jeel</div>
 
-        <p class="subtitle">
-            I build reliable backend systems, REST-based APIs,
-            and scalable database-driven applications.
-        </p>
+            <h1>
+                Backend<br>
+                Developer<span>.</span>
+            </h1>
 
-        <a href="Jeel_Rajani_Resume.pdf" class="btn" download>
-            Download Resume
-        </a>
+            <p class="desc">
+                I build reliable backend systems, scalable APIs,
+                and database-driven applications.
+            </p>
 
-        <div class="meta">
-            <div>
-                <strong>2+ Years Experience</strong><br>
-                PHP & Backend Development
-            </div>
-            <div>
-                <strong>API & Database</strong><br>
-                MySQL, Integrations
+            <div class="stats">
+                <div>
+                    <strong>Backend</strong><br>
+                    PHP / APIs / Logic
+                </div>
+                <div>
+                    <strong>Databases</strong><br>
+                    MySQL / Optimization
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="hero-right">
-        <div class="image-box">
-            <img src="bg.jpeg" alt="Jeel Rajani">
+        <!-- RIGHT SIDE -->
+        <div class="right">
+            <div class="photo-frame">
+                <img src="profile.jpg" alt="Jeel Rajani">
+            </div>
         </div>
-    </div>
-</header>
+
+    </header>
 
 </body>
+
 </html>
