--- a/index.html
+++ b/index.html
@@ -1,52 +1,220 @@
-<!DOCTYPE html>
-<html lang="en">
+<main>
+    <aside>
+        <ul class="Links">
+            <li onclick="Navigate(0)" class="activeLink"><i class="fa-solid fa-house"></i>
+                <p>Home</p>
+            </li>
+            <li onclick="Navigate(1)"><i class="fa-solid fa-user"></i>
+                <p>About Me</p>
+            </li>
+            <li onclick="Navigate(2)"><i class="fa-solid fa-list"></i>
+                <p>Services</p>
+            </li>
+            <li onclick="Navigate(3)"><i class="fa-solid fa-images"></i>
+                <p>Gallery</p>
+            </li>
+            <li onclick="Navigate(4)"><i class="fa-solid fa-comments"></i>
+                <p>Contact Me</p>
+            </li>
+        </ul>
+    </aside>
+    <div class="swiper mySwiper">
+        <div class="SlideContainer swiper-wrapper">
+            <div class="swiper-slide home-slide">
+                <div class="HomeContent">
+                    <h1>Hi! I'm <span class="stylized-name">Jeel</span>,</h1>
+                    <h2>A <span class="proffesions">Backend Developer</span></h2>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Jeel Rajani | Backend Developer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-    <header class="hero">
-
-        <!-- LEFT SIDE -->
-        <div class="left">
-            <div class="logo">jeel</div>
-
-            <h1>
-                Backend<br>
-                Developer<span>.</span>
-            </h1>
-
-            <p class="desc">
-                I build reliable backend systems, scalable APIs,
-                and database-driven applications.
-            </p>
-
-            <div class="stats">
-                <div>
-                    <strong>Backend</strong><br>
-                    PHP / APIs / Logic
+                    <p class="heroline">
+                        I build secure, scalable backend systems using PHP,
+                        MySQL, REST APIs, and custom business logic.
+                    </p>
                 </div>
-                <div>
-                    <strong>Databases</strong><br>
-                    MySQL / Optimization
+                <div class="SideImg">
+                    <div class="top-right-corner">
+                        <hr class="hr1">
+                        <hr class="hr2">
+                    </div>
+                    <img src="bg.jpeg" alt="">
+                    <div class="bottom-left-corner">
+                        <hr class="hr1">
+                        <hr class="hr2">
+                    </div>
+                </div>
+                <p class="slide-help">Scroll for next slide <i class="fa-solid fa-chevron-right fa-shake"></i>
+                </p>
+            </div>
+            <div class="swiper-slide">
+                <div class="about-us">
+                    <h1 class="heading">About Me</h1>
+                    <h3 class="sub-heading">I'm Muzammal, <span class="proffesions">A Web Developer</span></h3>
+                    <p class="aboutme-deatils">
+                        I’m a Backend Developer with 2+ years of hands-on experience in PHP development.
+                        I specialize in building database-driven applications, REST APIs, and
+                        custom backend logic using Core PHP, CodeIgniter, and MySQL.
+
+                        I’ve worked on CRM systems, finance-related platforms, API integrations,
+                        and performance optimization. I focus on clean code, scalability,
+                        and real-world problem solving.
+                    </p>
+                    <div class="about-me-divison">
+                        <div class="about-me-table">
+                            <li><span>Experience:</span> 2+ Years</li>
+                            <li><span>Role:</span> Backend Developer</li>
+                            <li><span>Availability:</span> Full-time</li>
+                            <li><span>Tech Stack:</span> PHP, MySQL</li>
+                            <li><span>Frameworks:</span> CodeIgniter</li>
+                            <li><span>APIs:</span> REST / JSON</li>
+                            <li><span>Location:</span> India</li>
+                            <li><span>Focus:</span> Backend Systems</li>
+                        </div>
+
+                        <div class="skill-bar">
+                            <li>
+                                <p>HTML</p>
+                                <div class="bar">
+                                    <div class="active-bar" style="width:99%"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <p>CSS</p>
+                                <div class="bar">
+                                    <div class="active-bar" style="width:80%"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <p>JavaScript</p>
+                                <div class="bar">
+                                    <div class="active-bar" style="width:85%"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <p>Python</p>
+                                <div class="bar">
+                                    <div class="active-bar" style="width:50%"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <p>Django</p>
+                                <div class="bar">
+                                    <div class="active-bar" style="width:60%"></div>
+                                </div>
+                            </li>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="swiper-slide services">
 
-        <!-- RIGHT SIDE -->
-        <div class="right">
-            <div class="photo-frame">
-                <img src="profile.jpg" alt="Jeel Rajani">
+                <h1 class="heading">Services</h1>
+                <div class="service">
+                    <i class="fa-solid fa-database"></i>
+                    <h2>Backend Development</h2>
+                    <p>Secure, scalable backend systems using PHP & MySQL.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fa-solid fa-plug"></i>
+                    <h2>API Development</h2>
+                    <p>REST APIs, third-party integrations, JSON services.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fa-solid fa-gears"></i>
+                    <h2>Custom Logic</h2>
+                    <p>Business rules, workflows, automation.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fa-solid fa-shield-halved"></i>
+                    <h2>Security</h2>
+                    <p>Auth, validation, SQL injection prevention.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <h2>Optimization</h2>
+                    <p>Query optimization, performance tuning.</p>
+                </div>
+
+                <div class="service">
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Bug Fixing</h2>
+                    <p>Debugging legacy and custom PHP systems.</p>
+                </div>
+            </div>
+            <div class="swiper-slide gallery">
+                <h1 class="heading">Projects</h1>
+                <div class="project"><img src="https://picsum.photos/200/300?random=1" alt=""></div>
+                <div class="project"><img src="https://picsum.photos/200/300?random=2" alt=""></div>
+                <div class="project"><img src="https://picsum.photos/200/300?random=3" alt=""></div>
+                <div class="project"><img src="https://picsum.photos/200/300?random=4" alt=""></div>
+                <div class="project"><img src="https://picsum.photos/200/300?random=5" alt=""></div>
+                <div class="project"><img src="https://picsum.photos/200/300?random=6" alt=""></div>
+            </div>
+            <div class="swiper-slide contactMe">
+                <h1 class="heading">Contact Me</h1>
+                <div class="contactinfo"><i class="fa-solid fa-phone"></i>
+                    <h3>Mobile No</h3>
+                    <p>123-456-7890</p>
+                </div>
+                <div class="contactinfo"><i class="fa-solid fa-location-dot"></i>
+                    <h3>Location</h3>
+                    <p>Somewhere On Earth</p>
+                </div>
+                <div class="contactinfo"><i class="fa-regular fa-envelope"></i>
+                    <h3>Email</h3>
+                    <p>abc123@gmail.com</p>
+                </div>
+                <div class="contactinfo"><i class="fa-solid fa-globe"></i>
+                    <h3>Website</h3>
+                    <p>www.abc123.com</p>
+                </div>
+                <form>
+                    <h2>Send Me A Message <div class="SocialLinks">
+                            <i class="fa-brands fa-codepen"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-facebook"></i>
+                        </div>
+                    </h2>
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="email">
+                    <textarea rows="10" placeholder="Type your Message Here..."></textarea>
+                    <button class="primary">Send</button>
+
+                </form>
+                <footer>
+                    <li>Copyright © 2023 Muzammal.</li>
+                </footer>
             </div>
         </div>
+</main>
 
-    </header>
 
-</body>
+<Script>
+    var swiper = new Swiper(".swiper", {
+        effect: "cube",
+        allowTouchMove: false,
+        grabCursor: false,
+        cubeEffect: {
+            shadow: true,
+            slideShadows: true,
+            shadowOffset: 20,
+            shadowScale: 0.94,
+        },
+        mousewheel: true
+    });
+    swiper.on('slideChange', function () {
+        for (let i of document.querySelectorAll(".Links li")) i.classList.remove("activeLink")
+        Array.from(document.querySelectorAll(".Links li"))[swiper.activeIndex].classList.add("activeLink")
 
-</html>
+    });
+    function Navigate(indx) {
+        for (let i of document.querySelectorAll(".Links li")) i.classList.remove("activeLink")
+        Array.from(document.querySelectorAll(".Links li"))[indx].classList.add("activeLink")
+        swiper.slideTo(indx, 1000, true)
+    }
+
+</Script>
