--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Jeel Rajani | Backend Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <main>
     <aside>
@@ -199,9 +202,12 @@
 </main>
 
 
-<Script>
-    $(document).ready(function () {
-        var swiper = new Swiper(".swiper", {
+<script>
+    let swiper;
+
+    document.addEventListener("DOMContentLoaded", function () {
+
+        swiper = new Swiper(".swiper", {
             effect: "cube",
             allowTouchMove: false,
             grabCursor: false,
@@ -213,16 +219,25 @@
             },
             mousewheel: true
         });
-        swiper.on('slideChange', function () {
-            for (let i of document.querySelectorAll(".Links li")) i.classList.remove("activeLink")
-            Array.from(document.querySelectorAll(".Links li"))[swiper.activeIndex].classList.add("activeLink")
 
+        swiper.on('slideChange', function () {
+            document.querySelectorAll(".Links li")
+                .forEach(li => li.classList.remove("activeLink"));
+
+            document.querySelectorAll(".Links li")[swiper.activeIndex]
+                .classList.add("activeLink");
         });
-        function Navigate(indx) {
-            for (let i of document.querySelectorAll(".Links li")) i.classList.remove("activeLink")
-            Array.from(document.querySelectorAll(".Links li"))[indx].classList.add("activeLink")
-            swiper.slideTo(indx, 1000, true)
-        }
 
     });
-</Script>
+
+    // ✅ MUST be global
+    function Navigate(indx) {
+        document.querySelectorAll(".Links li")
+            .forEach(li => li.classList.remove("activeLink"));
+
+        document.querySelectorAll(".Links li")[indx]
+            .classList.add("activeLink");
+
+        swiper.slideTo(indx, 1000, true);
+    }
+</script>
