--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </aside>
     <div class="swiper mySwiper">
         <div class="SlideContainer swiper-wrapper">
-            <div class="swiper-slide home-slide">
+            <div class="swiper-slide home-slide display-flex">
                 <div class="HomeContent">
                     <h1>Hi! I'm <span class="stylized-name">Jeel</span>,</h1>
                     <h2>A <span class="proffesions">Backend Developer</span></h2>
