--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="swiper-slide">
                 <div class="about-us">
                     <h1 class="heading">About Me</h1>
-                    <h3 class="sub-heading">I'm Muzammal, <span class="proffesions">A Web Developer</span></h3>
+                    <h3 class="sub-heading">I'm Jeel, <span class="proffesions">A Web Developer</span></h3>
                     <p class="aboutme-deatils">
                         I’m a Backend Developer with 2+ years of hands-on experience in PHP development.
                         I specialize in building database-driven applications, REST APIs, and
@@ -157,12 +157,12 @@
             </div>
             <div class="swiper-slide gallery">
                 <h1 class="heading">Projects</h1>
-                <div class="project"><img src="https://picsum.photos/200/300?random=1" alt=""></div>
+                <!-- <div class="project"><img src="https://picsum.photos/200/300?random=1" alt=""></div>
                 <div class="project"><img src="https://picsum.photos/200/300?random=2" alt=""></div>
                 <div class="project"><img src="https://picsum.photos/200/300?random=3" alt=""></div>
                 <div class="project"><img src="https://picsum.photos/200/300?random=4" alt=""></div>
                 <div class="project"><img src="https://picsum.photos/200/300?random=5" alt=""></div>
-                <div class="project"><img src="https://picsum.photos/200/300?random=6" alt=""></div>
+                <div class="project"><img src="https://picsum.photos/200/300?random=6" alt=""></div> -->
             </div>
             <div class="swiper-slide contactMe">
                 <h1 class="heading">Contact Me</h1>
@@ -170,10 +170,10 @@
                     <h3>Mobile No</h3>
                     <p>123-456-7890</p>
                 </div>
-                <div class="contactinfo"><i class="fa-solid fa-location-dot"></i>
+                <!-- <div class="contactinfo"><i class="fa-solid fa-location-dot"></i>
                     <h3>Location</h3>
                     <p>Somewhere On Earth</p>
-                </div>
+                </div> -->
                 <div class="contactinfo"><i class="fa-regular fa-envelope"></i>
                     <h3>Email</h3>
                     <p>abc123@gmail.com</p>
@@ -198,7 +198,7 @@
 
                 </form>
                 <footer>
-                    <li>Copyright © 2023 Muzammal.</li>
+                    <li>Copyright © 2026 Jeel.</li>
                 </footer>
             </div>
         </div>
@@ -212,8 +212,8 @@
     document.addEventListener("DOMContentLoaded", function () {
 
         swiper = new Swiper(".swiper", {
-            direction: "vertical",
-            effect: "slide",          // ✅ normal slide
+            // direction: "vertical",
+            effect: "cube",          // ✅ normal slide
             speed: 600,
             allowTouchMove: false,
             grabCursor: false,
