--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Services</p>
             </li>
             <li onclick="Navigate(3)"><i class="fa-solid fa-images"></i>
-                <p>Gallery</p>
+                <p>Experience</p>
             </li>
             <li onclick="Navigate(4)"><i class="fa-solid fa-comments"></i>
                 <p>Contact Me</p>
@@ -75,7 +75,7 @@
                             <li><span>Role:</span> Backend Developer</li>
                             <li><span>Availability:</span> Full-time</li>
                             <li><span>Tech Stack:</span> PHP, MySQL</li>
-                            <li><span>Frameworks:</span> CodeIgniter</li>
+                            <li><span>Frameworks:</span> CodeIgniter, Custom PHP Framework</li>
                             <li><span>APIs:</span> REST / JSON</li>
                             <li><span>Location:</span> India</li>
                             <li><span>Focus:</span> Backend Systems</li>
@@ -95,21 +95,21 @@
                                 </div>
                             </li>
                             <li>
-                                <p>JavaScript</p>
+                                <p>PHP</p>
                                 <div class="bar">
                                     <div class="active-bar" style="width:85%"></div>
                                 </div>
                             </li>
                             <li>
-                                <p>Python</p>
+                                <p>JavaScript</p>
                                 <div class="bar">
-                                    <div class="active-bar" style="width:50%"></div>
+                                    <div class="active-bar" style="width:70%"></div>
                                 </div>
                             </li>
                             <li>
-                                <p>Django</p>
+                                <p>MySQL</p>
                                 <div class="bar">
-                                    <div class="active-bar" style="width:60%"></div>
+                                    <div class="active-bar" style="width:75%"></div>
                                 </div>
                             </li>
                         </div>
@@ -155,14 +155,28 @@
                     <p>Debugging legacy and custom PHP systems.</p>
                 </div>
             </div>
-            <div class="swiper-slide gallery">
-                <h1 class="heading">Projects</h1>
-                <!-- <div class="project"><img src="https://picsum.photos/200/300?random=1" alt=""></div>
-                <div class="project"><img src="https://picsum.photos/200/300?random=2" alt=""></div>
-                <div class="project"><img src="https://picsum.photos/200/300?random=3" alt=""></div>
-                <div class="project"><img src="https://picsum.photos/200/300?random=4" alt=""></div>
-                <div class="project"><img src="https://picsum.photos/200/300?random=5" alt=""></div>
-                <div class="project"><img src="https://picsum.photos/200/300?random=6" alt=""></div> -->
+            <div class="swiper-slide gallery experience">
+                <h1 class="heading">Experience</h1>
+
+                <div class="experience-content">
+                    <h2>Work Experience</h2>
+
+                    <h3>Jr. PHP Developer</h3>
+                    <p class="company">
+                        <strong>Drop Techno Lab Private Limited</strong> | Ahmedabad
+                    </p>
+                    <p class="duration">Feb 2024 – Present</p>
+
+                    <ul class="experience-points">
+                        <li>Developed and maintained backend modules using PHP and MVC architecture</li>
+                        <li>Integrated third-party APIs for data verification, CRM sync, and external services</li>
+                        <li>Implemented authentication, role-based access control, and secure data handling</li>
+                        <li>Designed and optimized MySQL queries to improve performance</li>
+                        <li>Handled file uploads, email notifications, and cron jobs</li>
+                        <li>Used Git for version control and participated in code reviews</li>
+                        <li>Worked on multiple client projects with complex business workflows</li>
+                    </ul>
+                </div>
             </div>
             <div class="swiper-slide contactMe">
                 <h1 class="heading">Contact Me</h1>
