--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li onclick="Navigate(2)"><i class="fa-solid fa-list"></i>
                 <p>Services</p>
             </li>
-            <li onclick="Navigate(3)"><i class="fa-solid fa-images"></i>
+            <li onclick="Navigate(3)"><i class="fa-solid fa-briefcase"></i>
                 <p>Experience</p>
             </li>
             <li onclick="Navigate(4)"><i class="fa-solid fa-comments"></i>
@@ -53,7 +53,7 @@
                         <hr class="hr2">
                     </div>
                 </div>
-                <p class="slide-help">Scroll for next slide <i class="fa-solid fa-chevron-right fa-shake"></i>
+                <p class="slide-help">Scroll for next slide <i class="fa-solid fa-chevron-down fa-shake"></i>
                 </p>
             </div>
             <div class="swiper-slide">
@@ -196,7 +196,7 @@
                     <h3>Website</h3>
                     <p>www.abc123.com</p>
                 </div>
-                <form>
+                <form action="https://formspree.io/f/xkogggra" method="POST">
                     <h2>Send Me A Message <div class="SocialLinks">
                             <i class="fa-brands fa-codepen"></i>
                             <i class="fa-brands fa-instagram"></i>
@@ -211,9 +211,9 @@
                     <button class="primary">Send</button>
 
                 </form>
-                <footer>
+                <!-- <footer>
                     <li>Copyright © 2026 Jeel.</li>
-                </footer>
+                </footer> -->
             </div>
         </div>
 </main>
