--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="contactinfos-container">
                     <div class="contactinfo"><i class="fa-solid fa-phone"></i>
                         <h3>Mobile No</h3>
-                        <p>123-456-7890</p>
+                        <p>+91 99250 49234</p>
                     </div>
                     <!-- <div class="contactinfo"><i class="fa-solid fa-location-dot"></i>
                     <h3>Location</h3>
@@ -284,11 +284,16 @@
                 </div> -->
                     <div class="contactinfo"><i class="fa-regular fa-envelope"></i>
                         <h3>Email</h3>
-                        <p>abc123@gmail.com</p>
+                        <p>jeelrajani1111@gmail.com</p>
                     </div>
-                    <div class="contactinfo"><i class="fa-solid fa-globe"></i>
+                    <!-- <div class="contactinfo"><i class="fa-solid fa-globe"></i>
                         <h3>Website</h3>
-                        <p>www.abc123.com</p>
+                        <p>https://jeelrajani.github.io/</p>
+                    </div> -->
+                    <div class="contactinfo"><i class="fa-brands fa-linkedin-in"></i>
+                        <h3>LinkedIn</h3>
+                        <p><a href="https://www.linkedin.com/in/jeel-rajani" target="_blank">LinkedIn
+                                Profile</a></p>
                     </div>
                 </div>
                 <form action="https://formspree.io/f/xkogggra" method="POST">
