--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
                     </div> -->
                     <div class="contactinfo"><i class="fa-brands fa-linkedin-in"></i>
                         <h3>LinkedIn</h3>
-                        <p><a href="https://www.linkedin.com/in/jeel-rajani" target="_blank">LinkedIn
+                        <p><a href="https://www.linkedin.com/in/jeel-rajani" target="_blank"
+                                style="text-decoration: none;">LinkedIn
                                 Profile</a></p>
                     </div>
                 </div>
