--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
             <li onclick="Navigate(3)"><i class="fa-solid fa-briefcase"></i>
                 <p>Experience</p>
             </li>
-            <li onclick="Navigate(4)"><i class="fa-solid fa-project-diagram"></i>
+            <li onclick="Navigate(4)"><i class="fa-solid fa-graduation-cap"></i>
+                <p>Education</p>
+            </li>
+            <li onclick="Navigate(5)"><i class="fa-solid fa-project-diagram"></i>
                 <p>Projects</p>
             </li>
-            <li onclick="Navigate(5)"><i class="fa-solid fa-list"></i>
+            <li onclick="Navigate(6)"><i class="fa-solid fa-list"></i>
                 <p>Services</p>
             </li>
-            <li onclick="Navigate(6)"><i class="fa-solid fa-comments"></i>
+            <li onclick="Navigate(7)"><i class="fa-solid fa-comments"></i>
                 <p>Contact Me</p>
             </li>
         </ul>
@@ -179,6 +182,26 @@
                         <li>Used Git for version control and participated in code reviews</li>
                         <li>Worked on multiple client projects with complex business workflows</li>
                     </ul>
+                </div>
+            </div>
+            <div class="swiper-slide education">
+                <h1 class="heading">Education</h1>
+                <div class="education-wrapper">
+                    <div class="education-card">
+                        <h2>Master of Computer Applications (MCA)</h2>
+                        <p class="institute">
+                            <strong>LJ University</strong> Ahmedabad | India
+                        </p>
+                        <p class="duration">2022 – 2024</p>
+                    </div>
+
+                    <div class="education-card">
+                        <h2>Bachelor of Commerce (Hons.)</h2>
+                        <p class="institute">
+                            <strong>Marwadi University</strong> Rajkot | India
+                        </p>
+                        <p class="duration">2019 – 2022</p>
+                    </div>
                 </div>
             </div>
             <div class="swiper-slide projects">
