--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                     </div> -->
                     <div class="contactinfo"><i class="fa-brands fa-linkedin-in"></i>
                         <h3>LinkedIn</h3>
-                        <p><a href="https://www.linkedin.com/in/jeel-rajani" target="_blank"
-                                style="text-decoration: none;">LinkedIn
+                        <p style="text-decoration: none;"><a href="https://www.linkedin.com/in/jeel-rajani"
+                                target="_blank">LinkedIn
                                 Profile</a></p>
                     </div>
                 </div>
