--- a/index.html
+++ b/index.html
@@ -315,24 +315,23 @@
                     </div> -->
                     <div class="contactinfo"><i class="fa-brands fa-linkedin-in"></i>
                         <h3>LinkedIn</h3>
-                        <p style="text-decoration: none;"><a href="https://www.linkedin.com/in/jeel-rajani"
-                                target="_blank">LinkedIn
-                                Profile</a></p>
+                        <p><a href="https://www.linkedin.com/in/jeel-rajani" target="_blank">LinkedIn Profile</a></p>
                     </div>
                 </div>
                 <form action="https://formspree.io/f/xkogggra" method="POST">
-                    <h2>Send Me A Message <div class="SocialLinks">
+                    <h2>Send Me A Message
+                        <!-- <div class="SocialLinks">
                             <i class="fa-brands fa-codepen"></i>
                             <i class="fa-brands fa-instagram"></i>
                             <i class="fa-brands fa-twitter"></i>
                             <i class="fa-brands fa-twitter"></i>
                             <i class="fa-brands fa-facebook"></i>
-                        </div>
+                        </div> -->
                     </h2>
                     <input type="text" name="name" placeholder="Name" required>
                     <input type="text" name="email" placeholder="email" required>
                     <textarea rows="10" name="message" placeholder="Type your Message Here..." required></textarea>
-                    <button class="primary">Send</button>
+                    <button class="primary" type="submit">Send</button>
 
                 </form>
                 <!-- <footer>
@@ -366,6 +365,7 @@
             },
 
             allowTouchMove: false,
+            simulateTouch: false,
             grabCursor: false,
             keyboard: {
                 enabled: true
