--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
     document.addEventListener("DOMContentLoaded", function () {
 
         swiper = new Swiper(".swiper", {
-            effect: "cube",
             direction: "vertical",
+            effect: "cube",
             speed: 700,
 
             cubeEffect: {
@@ -361,23 +361,26 @@
             mousewheel: {
                 forceToAxis: true,
                 sensitivity: 1,
-                releaseOnEdges: true,   // ⭐ VERY IMPORTANT
+                releaseOnEdges: true
             },
 
             allowTouchMove: false,
             simulateTouch: false,
             grabCursor: false,
-            keyboard: {
-                enabled: true
-            }
+            keyboard: { enabled: true }
         });
 
-        swiper.on("slideChange", function () {
-            document.querySelectorAll(".Links li")
-                .forEach(li => li.classList.remove("activeLink"));
+        /* 🔥 FIX: Disable cube when Contact slide is active */
+        swiper.on("slideChangeTransitionStart", () => {
+            const activeSlide = swiper.slides[swiper.activeIndex];
 
-            document.querySelectorAll(".Links li")[swiper.activeIndex]
-                .classList.add("activeLink");
+            if (activeSlide.classList.contains("contactMe")) {
+                swiper.params.effect = "slide";
+                swiper.update();
+            } else {
+                swiper.params.effect = "cube";
+                swiper.update();
+            }
         });
 
     });
